fix: changed units of fonts sizes, improved readability of img section, renamed classes

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,4 +1,4 @@
-.header{
+.header_section{
     height: 10%;
 
     #header{
